--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
+# Build settings
 name: Rob Bos
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+# permalink: /blog/:year/:month/:day/:title
 theme: minima
