--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,6 @@ jekyll-archives:
     year: '/:year/'
     month: '/:year/:month/'
     tag: '/tag/:name/'
+tag_archive:
+  type: liquid
+  path: /tags/
