--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,3 +11,4 @@ jobs:
       with:
         check-modified-files-only: 'no'
         use-quiet-mode: 'no'
+        config-file: 'markdown-link-config.json'
