testing replacement pattern for direct links to posts (will always start with 20**)

--- a/.github/workflows/markdown-link-config.json
+++ b/.github/workflows/markdown-link-config.json
@@ -3,6 +3,10 @@
 		{
 			"pattern": "/images/",
 			"replacement": "https://rajbos.github.io/images/"
+		},
+		{
+			"pattern": "20",
+			"replacement": "https://rajbos.github.io/20"
 		}
 	]
 }
