adding wildcard to signal the link needs to start with the 20 instead of searching for it everywhere

--- a/.github/workflows/markdown-link-config.json
+++ b/.github/workflows/markdown-link-config.json
@@ -5,7 +5,7 @@
 			"replacement": "https://rajbos.github.io/images/"
 		},
 		{
-			"pattern": "20",
+			"pattern": "20^",
 			"replacement": "https://rajbos.github.io/20"
 		}
 	]
