--- a/.github/workflows/markdown-link-config.json
+++ b/.github/workflows/markdown-link-config.json
@@ -11,6 +11,10 @@
 		{
 			"pattern": "/blog/^",
 			"replacement": "https://rajbos.github.io/blog/"
+		},
+		{
+			"pattern": "^/blog/",
+			"replacement": "https://rajbos.github.io/blog/"
 		}
 	]
 }
