--- a/.github/workflows/markdown-link-config.json
+++ b/.github/workflows/markdown-link-config.json
@@ -2,19 +2,19 @@
 	"replacementPatterns": [
 		{
 			"pattern": "/images/",
-			"replacement": "https://rajbos.github.io/images/"
+			"replacement": "https://devopsjournal.io/images/"
 		},
 		{
 			"pattern": "20^",
-			"replacement": "https://rajbos.github.io/20"
+			"replacement": "https://devopsjournal.io/20"
 		},
 		{
 			"pattern": "/blog/^",
-			"replacement": "https://rajbos.github.io/blog/"
+			"replacement": "https://devopsjournal.io/blog/"
 		},
 		{
 			"pattern": "^/blog/",
-			"replacement": "https://rajbos.github.io/blog/"
+			"replacement": "https://devopsjournal.io/blog/"
 		}
 	]
 }
