--- a/.github/workflows/dev-to-sync.yml
+++ b/.github/workflows/dev-to-sync.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   sync:
     runs-on: ubuntu-latest
+    concurrency: once
     steps:
       - uses: actions/checkout@v2
       - run: npm install axios
