Update baseUrl to the new domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Build settings
 name: Rob Bos
 markdown: kramdown
-site.baseurl: "rajbos.github.io"
+site.baseurl: "devopsjournal.io"
 permalink: /blog/:year/:month/:day/:title
 theme: jekyll-theme-cayman
 plugins:
