Adding async to the methods

--- a/.github/workflows/dev-to-sync.yml
+++ b/.github/workflows/dev-to-sync.yml
@@ -19,6 +19,6 @@ jobs:
              const script = require('.github/workflows/dev-to-script.js')
              const axios = require('axios');
 
-             script({devtoToken, axios})
+             await script({devtoToken, axios})
 
             
