--- a/.github/workflows/dev-to-sync.yml
+++ b/.github/workflows/dev-to-sync.yml
@@ -1,9 +1,10 @@
+name: sync dev.to
 on:
   workflow_dispatch:
 
   schedule:
     - cron: "0 3 * * *"
-    
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -20,5 +21,3 @@ jobs:
              const axios = require('axios');
 
              await script({devtoToken, axios})
-
-            
