--- a/.github/workflows/dev-to-sync.yml
+++ b/.github/workflows/dev-to-sync.yml
@@ -4,6 +4,11 @@ on:
 
   schedule:
     - cron: "0 3 * * *"
+    
+  push:
+    paths:
+    - .github/workflows/dev-to-sync.yml
+    - .github/workflows/dev-to-script.js
 
 jobs:
   sync:
